--- a/config/config.yml
+++ b/config/config.yml
@@ -7,6 +7,7 @@ base_url: ~                         # Pico will try to guess its base URL, if th
 rewrite_url: ~                      # A boolean (true or false) indicating whether URL rewriting is forced
 debug: ~                            # Set this to true to enable Pico's debug mode
 timezone: ~                         # Your PHP installation might require you to manually specify a timezone
+site_language: en
 
 ##
 # Theme
@@ -16,6 +17,7 @@ themes_url: ~                       # Pico will try to guess the URL to the them
                                     #     If this fails, override it here. Example: https://example.com/pico/themes/
 theme_config:                       # Additional theme-specific config
     widescreen: false               # Default theme: Use more horizontal space (i.e. make the site container wider)
+    lang: en
 twig_config:                        # Twig template engine config
     autoescape: html                # Let Twig escape variables by default
     strict_variables: false         # If set to true, Twig will bail out when unset variables are being used
